--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <main id="main">
+            <header>
+                <h1 id="title">Burton "Gus" Guster</h1>
+                <h2>The Man with a Million Names</h2>
+            </header>
+            <figure id="image-div">
+                <img id="image" src="http://www.usanetwork.com/sites/usanetwork/files/styles/usanetwork_media_gallery_image/public/psych_gus-1.jpg" alt="Squirts Macintosh" />
+                <div id="img-caption">- Longbranch Pennywhistle seducing you with his irresistable charm</figcaption>
+            </figure>
+            <section id="tribute-info">
+                <ul class="gus-trivia">
+                    <li>Gus is 1/4 Jamaican.</li>
+                    <li>The "head peel" is his 4th greatest fear.</li>
+                    <li>Gus is almost never introduced by his real name, as Shawn usually makes up an alias like "MC Clap Your Handz," "Lavender Gooms," "Clementine Woolysocks," and "Ernesto Agapito Garces con ya de Abelar" (which was actually given to him by Shawn's uncle).</li>
+                    <li>Gus's stress-relieving fantasy is to shoot Shawn in the head.</li>
+                    <li>Gus pees sitting down because all the Men's Health journals say it's better for the circulation.</li>
+                    <li>Gus has a subscription to Safecracker's Monthly, and is an expert safecracker.</li>
+                    <li>According to Shawn, he has achieved "pitch-perfect AK-47 mouth action," meaning he can imitate the sounds of gunfire from the aforementioned AK-47.</li>
+                    <li>He has defused a bomb, despite running away from another.</li>
+                    <li>Gus is allergic to edible gold dust.</li>
+                    <li>He has a SuperSniffer (amazing sense of smell).</li>
+                    <li>He has a chronic fear of toupees.</li>
+                    <li>He has a "Magic Head".</li>
+                </ul>
+                <figure class="quote">
+                    <blockquote>"You heard about Pluto? That's messed up, right."</blockquote>
+                    <figcaption>-Ernesto Agapito Garcés con ya de Abelar</figcaption>
+                </figure>
+            </section>
+            <footer>
+                <p>Learn more about Hummingbird Saltalamacchia <a href="http://psychusa.wikia.com/wiki/Burton_%22Gus%22_Guster">here</a>.</p>
+            </footer>
+        </main>
         <script src="js/app.js"></script>
     </body>
 </html>
