add css/ minor changes to pass tests

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <h1 id="title">Burton "Gus" Guster</h1>
                 <h2>The Man with a Million Names</h2>
             </header>
-            <figure id="image-div">
+            <figure id="img-div">
                 <img id="image" src="http://www.usanetwork.com/sites/usanetwork/files/styles/usanetwork_media_gallery_image/public/psych_gus-1.jpg" alt="Squirts Macintosh" />
                 <div id="img-caption">- Longbranch Pennywhistle seducing you with his irresistable charm</figcaption>
             </figure>
@@ -37,7 +37,7 @@
                 </figure>
             </section>
             <footer>
-                <p>Learn more about Hummingbird Saltalamacchia <a href="http://psychusa.wikia.com/wiki/Burton_%22Gus%22_Guster">here</a>.</p>
+                <p>Learn more about Hummingbird Saltalamacchia <a id="tribute-link" href="http://psychusa.wikia.com/wiki/Burton_%22Gus%22_Guster" target="_blank">here</a>.</p>
             </footer>
         </main>
         <script src="js/app.js"></script>
